2005-05-19  Manish Singh  <yosh@gimp.org>

	* plug-ins/jpeg/jpeg-save.c (save_image): don't do pointer arithmetic
	with void *. Fixes bug #304701.

2005-05-19  Manish Singh  <yosh@gimp.org>

	* app/config/test-config.c: Add casts to G_OBJECT() for
	gimp_config_diff().

2005-05-19  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolorscales.c: removed the hex entry from the
	GimpColorScales widget.

	* libgimpwidgets/gimpcolorselection.c: added it here instead.

	* app/widgets/gimpcoloreditor.[ch]: and here, next to the FG/BG
	editor.

2005-05-19  Sven Neumann  <sven@gimp.org>

	* app/core/gimpstrokeoptions.[ch]: renamed property "miter" to
	"miter-limit" and added a description to be used as a tooltip in
	the stroke editor.

	* app/core/gimpdrawable-stroke.c
	* app/widgets/gimpstrokeeditor.c: changed accordingly.

2005-05-19  Sven Neumann  <sven@gimp.org>

	* app/core/gimpstrokeoptions.[ch]
	* app/widgets/gimpdasheditor.c
	* app/widgets/gimpstrokeeditor.c: small change to the internal API
	to reduce code and conversion between GArray and GValueArray.

2005-05-19  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdashpattern.[ch]
	* app/widgets/gimpdasheditor.c: moved more code out of
	GimpDashEditor to gimpdashpattern.c. Fixed bug in last commit.

2005-05-19  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdashpattern.[ch]
	* app/widgets/gimpdasheditor.c: moved code out of GimpDashEditor
	to gimpdashpattern.c.

2005-05-19  Michael Natterer  <mitch@gimp.org>

	* plug-ins/dbbrowser/Makefile.am
	* plug-ins/dbbrowser/gimpbrowser.[ch]: removed again...

	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgetstypes.h
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimpwidgetsmarshal.list
	* libgimpwidgets/gimpwidgets.def
	* libgimpwidgets/gimpbrowser.[ch]: ...and added here.

	* plug-ins/dbbrowser/gimpprocbrowser.c
	* plug-ins/dbbrowser/plugin-browser.c: changed accordingly.

	* plug-ins/dbbrowser/gimpprocbrowser.c: fixed searching by help.
